src/test/deca/context/invalid/homemade/tests/test337_type_op_unaire/test337_type_op_unaire10.deca
// test invalide de la règle 3.37


{
    int a = -"toto";
}
